--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>please read</title>
     </head>
     <body>
-        <h1>Please dont hate me 😥</h1>
+        <h1>Please read this !!😉</h1>
         
-        <h2>can you ask lasse for his discord.... ☺</h2>
+        <h2>can you ask lasse for his discord.... 😁</h2>
     </body>
 
 </html>
